--- a/static/layout.css
+++ b/static/layout.css
@@ -1,3 +1,111 @@
+.form-steps {
+    position: relative;
+}
+
+.steps-btns {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15px;
+
+    position: absolute;
+}
+
+/* .each-step { } */
+
+.step-btn-info {
+    display: none;
+}
+
+
+
+
+
+
+.tx-inp-d {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+
+
+
+
+
+
+@media only screen and (min-width: 69.375em ) /* min-width:  1110px */ {
+    /* .form-steps { } */
+    .steps-btns {
+        flex-direction: column;
+    }
+    
+    .each-step {
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .step-btn-info {
+        display: block;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* .main-layout {
     display: flex;
     flex-direction: column;
