--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,136 @@
+.num-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border: 1px solid var(--clr-neut-5);
+    border-radius: 100vh;
+    width:  37px;
+    aspect-ratio: 1 / 1;
+    color: var(--clr-neut-5);
+    font-weight: var(--fw-medium);
+}
+
+.hd-s {
+    font-size: 32px;
+    /* font-size: 26px; */
+    font-weight: 700;
+    color: var(--clr-prim-1);
+    margin-top: 0;
+    margin-bottom: 19px;
+}
+
+.pr-s {
+    font-size: 1rem;
+    font-weight: var(--fw-me);
+    color: var(--clr-neut-1);
+    margin-top: 0;
+    margin-bottom: 40px;
+}
+
+/* .tx-inp-lbl-s {
+    font-size: 1rem;
+    font-weight: var(--fw-medium);
+    color: var(--clr-prim-1);
+} */
+.tx-inp-d {
+    margin-bottom: 24px;
+}
+
+.tx-inp-s {
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--clr-neut-2);
+    font-weight: var(--fw-bold);
+    color: var(--clr-prim-1);
+    padding: 16px;
+    margin-top: 8px;
+    
+}
+.tx-inp-s::placeholder {
+    color: var(--clr-neut-1);
+    opacity: 1;
+}
+
+.tx-inp-er-s {
+    color: var(--clr-prim-5);
+    font-weight: var(--fw-medium);
+}
+
+.btn {
+    font-weight: 500;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+}
+.btn.nex {
+    background-color: var(--clr-prim-1);
+    color: var(--clr-neut-5);
+}
+.btn.gob {
+    background-color: var(--clr-neut-5);
+    color: var(--clr-neut-1);
+}
+.btn.con {
+    background-color: var(--clr-prim-2);
+    color: var(--clr-neut-5);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* .heading-1 {
     font-weight: var(--fw-bold);
     /* font-size: 1.5rem; *
