--- a/static/layout.css
+++ b/static/layout.css
@@ -49,9 +49,6 @@
 }
 
 
-
-
-
 .form-fields {
     flex-grow: 1;
     flex-shrink: 1;
@@ -81,7 +78,33 @@
     flex-wrap: wrap;
 }
 
+.step-2-options {
+    display: flex;
+    flex-direction: column;
+}
 
+.step-2-option {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.monthly-and-year {
+    display: flex;
+    flex-direction: row;
+
+    position: relative;
+}
+.monthly-and-year > label {
+    width: 100%;
+}
+
+.monthly-and-year-icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
 
 .back-and-next {
     display: flex;
@@ -134,6 +157,15 @@
     .fields {
         position: static;
         margin-top: 0;
+    }
+
+    .step-2-options {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    
+    .step-2-option {
+        flex-direction: column;
     }
 }
 
