states under work.
doing the states and fixing some styling and markup

--- a/static/globle.css
+++ b/static/globle.css
@@ -46,6 +46,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: var(--clr-neut-3);
+    /* line-height: 1.5; */
 }
 
 input, button {
@@ -124,141 +125,3 @@ img {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* :root {
-    --p: black;
-
-    /* color primary *
-    --clr-prim-1: hsl(213, 96%, 18%); /* Marine blue *
-    --clr-prim-2: hsl(243, 100%, 62%); /* Purplish blue *
-    --clr-prim-3: hsl(228, 100%, 84%); /* Pastel blue *
-    --clr-prim-4: hsl(206, 94%, 87%); /* Light blue *
-    --clr-prim-5: hsl(354, 84%, 57%); /* Strawberry red *
-
-    /* color neutral *
-    --clr-neut-1: hsl(231, 11%, 63%); /* Cool *
-    --clr-neut-2: hsl(229, 24%, 87%); /* Light *
-    --clr-neut-3: hsl(217, 100%, 97%); /* Magnolia *
-    --clr-neut-4: hsl(231, 100%, 99%); /* Alabaster *
-    --clr-neut-5: hsl(0, 0%, 100%); /* White *
-
-    /* typography *
-    --ff-body: "Ubuntu", Sans-serif;
-    --fs-body: 1rem; /* 16px *
-    --fw-normal: 400;
-    --fw-medium: 500;
-    --fw-bold: 700;
-}
-
-@font-face {
-    font-family: "Ubuntu";
-    font-weight: 400;
-    src: url("./fonts/Ubuntu-Regular.ttf");
-}
-@font-face {
-    font-family: "Ubuntu";
-    font-weight: 500;
-    src: url("./fonts/Ubuntu-Medium.ttf");
-}
-@font-face {
-    font-family: "Ubuntu";
-    font-weight: 700;
-    src: url("./fonts/Ubuntu-Bold.ttf");
-}
-
-body {
-    font-family: var(--ff-body);
-    font-size: var(--fs-body);
-    font-weight: var(--fw-normal);
-    padding: 0;
-    margin: 0;
-    background-color: var(--clr-neut-3);
-}
-
-.document-form {
-    color: var(--clr-neut-1);
-}
-
-h1,h2,p {
-    padding: 0;
-    margin: 0;
-}
-input, button {
-    font-size: inherit;
-    font-family: inherit;
-}
-
-img {
-    display: block;
-}
-
-@media only screen and (min-width: 69.375em ) /* min-width:  1110px * {
-
-}
-
-.sr-only {
-	border: 0 !important;
-	clip: rect(1px, 1px, 1px, 1px) !important; /* 1 *
-	-webkit-clip-path: inset(50%) !important;
-		clip-path: inset(50%) !important;  /* 2 *
-	height: 1px !important;
-	margin: -1px !important;
-	overflow: hidden !important;
-	padding: 0 !important;
-	position: absolute !important;
-	width: 1px !important;
-	white-space: nowrap !important;            /* 3 *
-}
-
-
-
-.sr-only-focusable:focus,
-.sr-only-focusable:active {
-	clip: auto !important;
-	-webkit-clip-path: none !important;
-		clip-path: none !important;
-	height: auto !important;
-	margin: auto !important;
-	overflow: visible !important;
-	width: auto !important;
-	white-space: normal !important;
-}  */
