--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,33 @@
-.num-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* form links */
+.links-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+.link {
+    text-decoration: none;
+}
 
+.num-icon {
     border: 1px solid var(--clr-neut-5);
     border-radius: 100vh;
     width:  37px;
     aspect-ratio: 1 / 1;
     color: var(--clr-neut-5);
     font-weight: var(--fw-medium);
+}
+/* form links */
+
+.field-set-main { --field-box-padding: 20px; }
+
+.fields {
+    box-sizing: border-box;
+    background-color: var(--clr-neut-5);
+    width: calc(100% -  2 * var(--field-box-padding) );
+    margin-inline: auto;
+    margin-bottom: 10px;
+    padding: var(--field-box-padding);
+    border-radius: 10px;
 }
 
 .hd-s {
@@ -29,34 +48,9 @@
     line-height: 1.5;
 }
 
-/* .tx-inp-lbl-s {
-    font-size: 1rem;
-    font-weight: var(--fw-medium);
-    color: var(--clr-prim-1);
-} */
-.tx-inp-d {
-    margin-bottom: 24px;
-}
-
-.tx-inp-s {
-    box-sizing: border-box;
-    width: 100%;
-    border-radius: 5px;
-    border: 1px solid var(--clr-neut-2);
-    font-weight: var(--fw-bold);
-    color: var(--clr-prim-1);
-    padding: 12px;
-    margin-top: 8px;
-    
-}
-.tx-inp-s::placeholder {
-    color: var(--clr-neut-1);
-    opacity: 1;
-}
-
-.tx-inp-er-s {
-    color: var(--clr-prim-5);
-    font-weight: var(--fw-medium);
+.back-and-next {
+    background-color: var(--clr-neut-5);
+    padding: var(--field-box-padding);
 }
 
 .btn {
@@ -79,32 +73,55 @@
 }
 
 
-.field-set-main { --field-box-padding: 20px; }
 
-.fields {
-    box-sizing: border-box;
-    background-color: var(--clr-neut-5);
-    width: calc(100% -  2 * var(--field-box-padding) );
-    margin-inline: auto;
-    margin-bottom: 10px;
-    padding: var(--field-box-padding);
-    border-radius: 10px;
+
+
+/* step 1 */
+.info-Wrapper {
+    margin-bottom: 24px;
 }
 
-.step-2-options {
+.info-text-input {
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--clr-neut-2);
+    font-weight: var(--fw-bold);
+    color: var(--clr-prim-1);
+    padding: 12px;
+    margin-top: 8px;
+    
+}
+.info-text-input::placeholder {
+    color: var(--clr-neut-1);
+    opacity: 1;
+}
+
+.info-error {
+    color: var(--clr-prim-5);
+    font-weight: var(--fw-medium);
+}
+/* step 1 */
+
+
+
+
+
+/* step 2 */
+.diff-plans {
     gap: 10px;
     margin-bottom: 25px;
 }
-.step-2-option {
+.plan {
     gap: 10px;
     border: 1px solid var(--clr-neut-2);
     padding: 15px;
     border-radius: 10px;
 }
-.step-2-option > div {
+.plan > div {
     line-height: 1.4;
 }
-.step-2-option-img {
+.plan-icon {
     width: 40px;
 }
 
@@ -139,37 +156,94 @@
     background-color: var(--clr-neut-5);
     pointer-events: none;
 }
+/* step 2 */
 
-.back-and-next {
-    background-color: var(--clr-neut-5);
-    padding: var(--field-box-padding);
+
+
+
+
+
+
+/* step 3 */
+.add-ons {
+    gap: 15px;
+}
+
+.chechbox-icon {
+    display: block;
+    border: 1px solid var(--clr-neut-2);
+    aspect-ratio: 1/1;
+    width: 20px;
+    border-radius: 5px;
 }
 
 
+.add-on {
+    gap: 15px;
+    border: 1px solid var(--clr-neut-2);
+    border-radius: 10px;
+    padding: 15px;
+}
+/* step 3 */
+
+
+
+
+
+
+/* step 4 */
+.table-section-1 , .table-section-2 {
+    padding: 10px;
+}
+
+.table-section-1 {
+    background-color: var(--clr-neut-3);
+    border-radius: 10px;
+}
+
+
+
+.table-section-1 > .table-data:first-child {
+    border-bottom: 1px solid var(--clr-neut-2);
+}
+/* step 4 */
+
+
+/* confirmation-message */
+.confirmation-message {
+    text-align: center;
+    padding-block: 60px;
+}
+
+.confirmation-message > img {
+    width: 75px;
+    margin-inline: auto;
+}
+
+.confirmation-message > .heading {
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-size: 29px;
+}
+
+.confirmation-message > .paragraph { 
+    line-height: 1.5;
+}
+
+/* confirmation-message */
+
+
+
+
 @media only screen and (min-width: 69.375em ) /* min-width:  1110px */ {
-    .hd-s {
-        font-size: 32px;
-    }
-
-    .pr-s {
-        margin-bottom: 40px;
-    }
-    
-    .tx-inp-d {
-        margin-bottom: 24px;
-    }
-
-    .tx-inp-s {
-        padding: 16px;
-    }
-
     .document-form {
         background-color: var(--clr-neut-5);
         padding: 16px;
+        border-radius: 10px;
     }
 
     .form-fields {
-        padding-top: 44px;
+        /* padding-top: 44px; */
         padding-bottom: 16px;
     }
 
@@ -181,286 +255,57 @@
         border-radius: 0;
     }
 
-    .step-2-options {
-        gap: 25px;
-        margin-bottom: 40px;
-    }
-    .step-2-option {
-        gap: 40px;
-        width: 100%;
-        padding: 15px;
-    }
-    /* .step-2-option-img {
-        width: 40px;
-    } */
-
     .back-and-next {
         background-color: transparent;
         padding: 0;
     }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .heading-1 {
-    font-weight: var(--fw-bold);
-    /* font-size: 1.5rem; *
-    font-size: 30px;
-    margin-bottom: 20px;
-}
-
-.paragraph {
-    margin-bottom: 20px;
-}
-
-.main-section-picture > img {
-    display: block;
-    width: 100%;
-}
-
-.document-form {
-    background-color: var(--clr-neut-3);
-}
-
-/* form-steps *
-.steps-btns {
-    box-sizing: border-box;
-    padding: 20px;
-    width: 100%;
-    gap: 20px;
-}
-
-.each-step {
-    gap: 10px;
-}
-
-.step-number-icon {
-    border: 1px solid var(--clr-neut-5);
-    border-radius: 100vh;
-    width:  37px;
-    aspect-ratio: 1 / 1;
-    color: var(--clr-neut-5);
-    font-weight: var(--fw-medium);
-}
-
-
-.step-title {
-    color: var(--clr-neut-5);
-    font-weight: var(--fw-medium);
-}
-
-
-/* form-fields *
-.form-fields {
-   
-    width: 100%;
-    margin-inline: auto;
-}
-
-
-/* step-1-fields *
-.field-set-main {
-    height: 100%;
-}
-
-.fields {
-    box-sizing: border-box;
-    background-color: var(--clr-neut-5);
-    width: calc(100% - 40px);
-    margin-inline: auto;
-    margin-bottom: 10px;
-    padding: 20px;
-    border-radius: 10px;
-
-    position: relative;
-    margin-top: -20%;
-
-}
-
-.your-info-title {
-    color: var(--clr-prim-1);
-}
-
-.your-info-text-field-label {
-    color: var(--clr-prim-1);
-}
-
-.your-info-text-field {
-    box-sizing: border-box;
-    width: 100%;
-    border: 1px solid var(--clr-neut-1);
-    padding: 15px;
-    border-radius: 10px;
-    margin-top: 5px;
-    margin-bottom: 30px;
-}
-
-/* step-2-fields *
-
-.select-plan-options {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.select-plan-option {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    border: 1px solid var(--clr-neut-1);
-    border-radius: 10px;
-    padding: 20px;
-}
-
-.select-plan-option-title {
-    color: var(--clr-prim-1);
-    font-weight: var(--fw-medium);
-}
-
-.monthly-and-year {
-    display: flex;
-    flex-direction: row;
-
-    position: relative;
-    margin-top: 20px;
-    background-color: var(--clr-neut-3);
-    font-weight: var(--fw-medium);
-    border-radius: 10px;
-}
-
-.monthly-and-year > label {
-    flex: 1;
-    text-align: center;
-    padding: 15px;
-}
-
-.monthly-and-year-icon {
-    display: flex;
-
-    width: 30px;
-    height: 10px;
-    border-radius: 100vh;
-    border: 5px solid var(--clr-prim-1);
-    background-color: var(--clr-prim-1);
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-}
-.monthly-and-year-icon::after {
-    content: '';
-    display: block;
-    width: 10px;
-    height: 10px;
-    border-radius: 100vh;
-    background-color: var(--clr-neut-5);
-    pointer-events: none;
-}
-
-
-
-.back-and-next {
-    background-color: var(--clr-neut-5);
-    padding: 20px;
-}
-
-
-.next-btn, .back-btn {
-    font-weight: 500;
-    padding: 10px 20px;
-    border-radius: 5px;
-}
-
-.next-btn {
-    background-color: var(--clr-prim-1);
-    border: 1px solid var(--clr-prim-1);
-    color: var(--clr-neut-5);
-}
-
-.back-btn {
-    background-color: var(--clr-neut-5);
-    border: 1px solid var(--clr-neut-5);
-    color: var(--clr-neut-1);
-}
-
-
-@media only screen and (min-width: 69.375em ) /* min-width:  1110px * {
-    .document-form {
-        background-color: var(--clr-neut-5);
-        box-sizing: border-box;
-        padding: 20px;
-        border-radius: 10px;
+    
+    .hd-s {
+        font-size: 32px;
     }
 
-    .form-fields {
-        width: 60%;
+    .pr-s {
+        margin-bottom: 40px;
     }
     
-    .field-set-main {
-        width: 70%;
-        margin-inline: auto;
+    /* step 1 */
+    .info-Wrapper {
+        margin-bottom: 24px;
     }
 
-    .fields {
-        position: static;
-        margin-top: 0;
-        margin-inline: 0;
-        padding: 0;
-        padding-top: 30px;
+    .step-1-tx-inp {
+        padding: 16px;
+    }
+    /* step 1 */
+
+
+    /* step 2 */
+
+    .diff-plans {
+        gap: 25px;
+        margin-bottom: 40px;
+    }
+    .plan {
+        gap: 40px;
         width: 100%;
+        padding: 15px;
     }
 
-    .back-and-next {
-        padding: 0;
-    }
-    
-} */
+    /* step 2 */
+
+    /* step 3 */
+    /* step 3 */
+
+    /* step 4 */
+    /* step 4 */
+
+   
+}
+
+
+
+
+
+
+
+
