--- a/static/layout.css
+++ b/static/layout.css
@@ -151,6 +151,13 @@
     display: flex;
     align-items: center;
 }
+
+.chechbox-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .add-on > div {
     flex-grow: 1;
 }
