--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,9 @@
 }
 .link {
     text-decoration: none;
+    background-color: transparent;
+    border: none;
+    text-align: left;
 }
 
 .num-icon {
@@ -206,12 +209,17 @@
 .plan-change {
     color: var(--clr-neut-1);
     font-weight: var(--fw-medium);
+    text-decoration: underline;
     text-decoration-thickness: 2px;
     text-underline-offset: 2px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
 }
-
-.table-section-1 > .table-data:first-child {
-    border-bottom: 1px solid var(--clr-neut-2);
+.Summary-plan { margin-bottom: 10px;}
+.table-data:nth-child(2) {
+    border-top: 1px solid var(--clr-neut-2);
 }
 /* step 4 */
 
@@ -298,12 +306,22 @@
         padding: 15px;
     }
 
+    .plan-title {
+        font-size: 18px;
+    }
+    
     /* step 2 */
-
+    
     /* step 3 */
+    .add-on-title {
+        font-size: 18px;
+    }
     /* step 3 */
 
     /* step 4 */
+    .summary-total-price {
+        font-size: 20px;
+    }
     /* step 4 */
 
    
