--- a/static/style.css
+++ b/static/style.css
@@ -14,32 +14,32 @@
 .num-icon {
     border: 1px solid var(--clr-neut-5);
     border-radius: 100vh;
-    width:  37px;
+    width:  2.313rem;
     aspect-ratio: 1 / 1;
     color: var(--clr-neut-5);
     font-weight: var(--fw-medium);
 }
 /* form links */
 
-.field-set-main { --field-box-padding: 20px; }
+.field-set-main { --field-box-padding: 1.25rem; }
 
 .fields {
     box-sizing: border-box;
     background-color: var(--clr-neut-5);
     width: calc(100% -  2 * var(--field-box-padding) );
     margin-inline: auto;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
     padding: var(--field-box-padding);
-    border-radius: 10px;
+    border-radius: 0.625rem;
 }
 
 .hd-s {
-    font-size: 29px;
+    font-size: 1.813rem;
     /* font-size: 26px; */
     font-weight: 700;
     color: var(--clr-prim-1);
     margin-top: 0;
-    margin-bottom: 19px;
+    margin-bottom: 1.188rem;
 }
 
 .pr-s {
@@ -47,7 +47,7 @@
     font-weight: var(--fw-me);
     color: var(--clr-neut-1);
     margin-top: 0;
-    margin-bottom: 26px;
+    margin-bottom: 1.625rem;
     line-height: 1.5;
 }
 
@@ -58,8 +58,8 @@
 
 .btn {
     font-weight: 500;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 0.625rem 1.25rem;
+    border-radius: 0.313rem;
     border: none;
 }
 .btn.nex {
@@ -81,18 +81,18 @@
 
 /* step 1 */
 .info-Wrapper {
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
 }
 
 .info-text-input {
     box-sizing: border-box;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 0.313rem;
     border: 1px solid var(--clr-neut-2);
     font-weight: var(--fw-bold);
     color: var(--clr-prim-1);
-    padding: 12px;
-    margin-top: 8px;
+    padding: 0.75rem;
+    margin-top: 0.5rem;
     
 }
 .info-text-input::placeholder {
@@ -112,26 +112,26 @@
 
 /* step 2 */
 .diff-plans {
-    gap: 10px;
-    margin-bottom: 25px;
+    gap: 0.625rem;
+    margin-bottom: 1.563rem;
 }
 .plan {
-    gap: 10px;
+    gap: 0.625rem;
     border: 1px solid var(--clr-neut-2);
-    padding: 15px;
-    border-radius: 10px;
+    padding: 0.938rem;
+    border-radius: 0.625rem;
 }
 .plan > div {
     line-height: 1.4;
 }
 .plan-icon {
-    width: 40px;
+    width: 2.5rem;
 }
 
 .monthly-and-year {
     background-color: var(--clr-neut-3);
-    padding: 15px;
-    border-radius: 10px;
+    padding: 0.938rem;
+    border-radius: 0.625rem;
 }
 
 .monthly-and-year > label {
@@ -143,18 +143,18 @@
 .monthly-and-year-icon {
     display: flex;
 
-    width: 30px;
-    height: 10px;
+    width: 1.875rem;
+    height: 0.625rem;
     border-radius: 100vh;
-    border: 5px solid var(--clr-prim-1);
+    border: 0.313rem solid var(--clr-prim-1);
     background-color: var(--clr-prim-1);
     pointer-events: none;
 }
 .monthly-and-year-icon::after {
     content: '';
     display: block;
-    width: 10px;
-    height: 10px;
+    width:  0.625rem;
+    height: 0.625rem;
     border-radius: 100vh;
     background-color: var(--clr-neut-5);
     pointer-events: none;
@@ -169,25 +169,25 @@
 
 /* step 3 */
 .add-ons {
-    gap: 15px;
+    gap: 0.938rem;
 }
 
 .chechbox-icon {
     border: 1px solid var(--clr-neut-2);
     aspect-ratio: 1/1;
-    width: 20px;
-    border-radius: 5px;
+    width: 1.25rem;
+    border-radius: 0.313rem;
 }
 .chechbox-icon > img {
-    width: 15px;
+    width: 0.938rem;
 }
 
 
 .add-on {
-    gap: 15px;
+    gap: 0.938rem;
     border: 1px solid var(--clr-neut-2);
-    border-radius: 10px;
-    padding: 15px;
+    border-radius: 0.625rem;
+    padding: 0.938rem;
 }
 /* step 3 */
 
@@ -198,12 +198,12 @@
 
 /* step 4 */
 .table-section-1 , .table-section-2 {
-    padding: 10px;
+    padding: 0.625rem;
 }
 
 .table-section-1 {
     background-color: var(--clr-neut-3);
-    border-radius: 10px;
+    border-radius: 0.625rem;
 }
 
 .plan-change {
@@ -217,7 +217,7 @@
     padding: 0;
     margin: 0;
 }
-.Summary-plan { margin-bottom: 10px;}
+.Summary-plan { margin-bottom: 0.625rem;}
 .table-data:nth-child(2) {
     border-top: 1px solid var(--clr-neut-2);
 }
@@ -227,18 +227,18 @@
 /* confirmation-message */
 .confirmation-message {
     text-align: center;
-    padding-block: 60px;
+    padding-block: 3.75rem;
 }
 
 .confirmation-message > img {
-    width: 75px;
+    width: 4.688rem;
     margin-inline: auto;
 }
 
 .confirmation-message > .heading {
-    margin-top: 20px;
-    margin-bottom: 15px;
-    font-size: 29px;
+    margin-top: 1.25rem;
+    margin-bottom: 0.938rem;
+    font-size: 1.813rem;
 }
 
 .confirmation-message > .paragraph { 
@@ -253,13 +253,13 @@
 @media only screen and (min-width: 69.375em ) /* min-width:  1110px */ {
     .document-form {
         background-color: var(--clr-neut-5);
-        padding: 16px;
-        border-radius: 10px;
+        padding: 1rem;
+        border-radius: 0.625rem;
     }
 
     .form-fields {
         /* padding-top: 44px; */
-        padding-bottom: 16px;
+        padding-bottom: 1rem;
     }
 
     .fields {
@@ -276,20 +276,20 @@
     }
     
     .hd-s {
-        font-size: 32px;
+        font-size: 2rem;
     }
 
     .pr-s {
-        margin-bottom: 40px;
+        margin-bottom: 2.5rem;
     }
     
     /* step 1 */
     .info-Wrapper {
-        margin-bottom: 24px;
+        margin-bottom: 1.5rem;
     }
 
     .step-1-tx-inp {
-        padding: 16px;
+        padding: 1rem;
     }
     /* step 1 */
 
@@ -297,30 +297,30 @@
     /* step 2 */
 
     .diff-plans {
-        gap: 25px;
-        margin-bottom: 40px;
+        gap: 1.563rem;
+        margin-bottom: 2.5rem;
     }
     .plan {
-        gap: 40px;
+        gap: 2.5rem;
         width: 100%;
-        padding: 15px;
+        padding: 0.938rem;
     }
 
     .plan-title {
-        font-size: 18px;
+        font-size: 1.125rem;
     }
     
     /* step 2 */
     
     /* step 3 */
     .add-on-title {
-        font-size: 18px;
+        font-size: 1.125rem;
     }
     /* step 3 */
 
     /* step 4 */
     .summary-total-price {
-        font-size: 20px;
+        font-size: 1.25rem;
     }
     /* step 4 */
 
