--- a/static/layout.css
+++ b/static/layout.css
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 15px;
+    gap: 0.938rem;
 
     position: absolute;
     top: 32px;
@@ -173,12 +173,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-block: 10px;
+    padding-block: 0.625rem;
 }
 .Summary-plan {
     /* background-color: aqua; */
     width: 100%;
-    height: 50px;
+    height: 3.125rem;
     position: relative;
     /* display: flex; */
     /* justify-content: space-between; */
@@ -240,18 +240,18 @@
     .links-list {
         width: max-content;
         transform: translateX(0%);
-        left: 33px;
-        top: 44px;
+        left: 2.063rem;
+        top: 2.75rem;
 
         flex-direction: column;
-        gap: 30px;
+        gap: 1.875rem;
     }
 
     .link {
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 10px;
+        gap: 0.625rem;
     }
     
     .link-info {
